try to fix non visible gravatar -> picture in bio$

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -68,7 +68,12 @@
     }
 }
 
+#fun {
+    background-color: #6c757d;
+}
+
 .fun {
+    background-color: inherit;
     width: 100%;
     height: 100%;
 }
